--- a/index.html
+++ b/index.html
@@ -22,9 +22,35 @@
 		.info {
 			font-size: 40px;
 		}
+			
+			 .titleC{
+                			positio: absolute;;
+
+                        top: 40%;
+			left: 50%;
+			transform : translateX(-50%) translateY(-50%);
+                text-align: center;
+                position: absolute;
+                font-family: fantasy;
+                font-size: 30px;
+            }
+			
+			.info_2{
+                            font-family:serif;
+                            text-align: center; 
+                            font-style:italic;
+
+            }
+   
 		</style>
 	</head>
 	<body>
+		
+		 <div class="titleC">
+            
+            <p> Hurry! Time is running out</p>
+        
+                 </div>
 		<table class="countdownContainer">
 			<tr class="info">
 			</tr>
