--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			transform : translateX(-50%) translateY(-50%);
                 text-align: center;
                 position: absolute;
-                font-family: fantasy;
+                font-family:sans-serif;
             }
 			
 			.info_2{
