--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</tr>
 			<tr class="info">
 				<td id="days">120</td>
-				<td id="hours">4</td>
+				<td id="hors">4</td>
 				<td id="minutes">12</td>
 				<td id="seconds">22</td>
 			</tr>
