--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 			</tr>
 			<tr class="info">
 				<td id="days">120</td>
-				<td id="hors">4</td>
+				<td id="hours">4</td>
 				<td id="minutes">12</td>
 				<td id="seconds">22</td>
 			</tr>
 			<tr>
 				<td>Days</td>
-				<td>Hours</td>
+				<td>Hors</td>
 				<td>Minutes</td>
 				<td>Seconds</td>
 			</tr>
