--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			transform : translateX(-50%) translateY(-50%);
                 text-align: center;
                 position: absolute;
-                font-family:sans-serif;
+                font-family:serif;
             }
 			
 			.info_2{
@@ -61,7 +61,7 @@
 			</tr>
 			<tr>
 				<td>Days</td>
-				<td>Hors</td>
+				<td>Hours</td>
 				<td>Minutes</td>
 				<td>Seconds</td>
 			</tr>
